--- a/appdevfinal-main/src/components/ProductModal.css
+++ b/appdevfinal-main/src/components/ProductModal.css
@@ -20,7 +20,7 @@
   margin: auto;
   border-radius: 16px;
   padding: 1.5rem;
-  color: #735c3b; /* dark text */
+  color: #383530; /* dark text */
   background-color: #ffffff; /* light cream */
   max-height: 90vh;
   display: flex;
@@ -76,10 +76,10 @@
 .size-button {
   padding: 0.5rem 1rem;
   border-radius: 6px;
-  border: 1px solid #735c3b;
-  background: #f1eee3;
+  border: 1px solid #9b9b9b;
+  background: #f0f0f0;
   cursor: pointer;
-  color: #735c3b;
+  color: #06402a;
   transition: all 0.2s;
   text-align: left;
   font-size: 0.75rem;
@@ -88,7 +88,7 @@
 .size-button.selected {
   border: 2px solid #06402a;
   background: #06402a;
-  color: #f1eee3;
+  color: #f0f0f0;
 }
 
 /* Quantity buttons */
@@ -99,7 +99,7 @@
   border-radius: 6px;
   font-weight: bold;
   font-size: 1rem;
-  color: #f1eee3;
+  color: #f0f0f0;
   cursor: pointer;
 }
 
@@ -114,7 +114,7 @@
   font-size: 0.95rem;
   line-height: 1.3;
   background-color: #f9f9f9;
-  color: #735c3b;
+  color: #3f3d39;
   border-radius: 10px;
   white-space: pre-wrap;
   word-break: break-word;
@@ -138,7 +138,7 @@
   border: none;
   border-radius: 8px;
   font-weight: bold;
-  color: #e5e5e5; /* light cream text */
+  color: #f0f0f0; /* light cream text */
   cursor: pointer;
 }
 
